derive/tests/snapshots/absolute_attribute_paths/Dial/get_all_dials.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `dial` table.
    pub fn get_all_dials<'a>(&'a self) -> impl Iterator<Item = Dial> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().dial().iter()
    }
}
